rate-controlled RTT latency benchmark